NEWSYSLOG NEWS -- history of user-visible changes.

This file:  Copyright (C) Planix, Inc.
	    - see COPYING for details

Please send bug reports to bugs@robohack.planix.com


* User-visible changes new in newsyslog-1.0.104.

- fix a bug in the signal name translation that affects all GNU/Linux
  systems and would cause any signals above #6 to be sent with one added
  to their values (eg. SIGUSR1, which is 10 is sent as 11, which SIGSEGV)


* User-visible changes new in newsyslog-1.0.103.

- a new debugging (-d) option allows various levels of verbose internals
  debugging without performing any actions and is now separate from
  normal verbose operation (-v) and separate from script generation (-n)

- verbose explanitory and debug messages are prefixed with "[-=]*> " to
  make them clearly visible and separate from script commands.

- new log files are created with unique temporary names and then renamed
  to their proper names only if their permissions and ownership are
  successfully initialised.  (Make sure you use the 'D' flag if the
  daemon will create its own log files on demand.)

- interval trim-time parsing errors are always printed to stderr, not
  just when '-v' is given.  Keep an eye out for e-mail from cron!  ;-)


* User-visible changes new in newsyslog-1.0.102.

- run intervals can be one minute (but not less) again.

- minor portability fixes for Solaris and linux.


* User-visible changes new in newsyslog-1.0.101.

- a bug in parsing timespecs with "interval-trimtime" that caused
  strange errors on some machines has been fixed.

- signals are displayed symbolically in error messages.

- run intervals (-i) of one minute (or less) are no longer allowed.

- verbose output shows the trim time in local time (in ISO-8601 format)
  now instead of as a Unix epoch time.

- the rest of the changes are just portability fixes (more Solaris and
  Linux portability) (though esp. including use of str2sig() for
  portable signal name translation on SunOS-5).

