@@ -17,7 +17,7 @@ AM_INIT_AUTOMAKE("$PACKAGE", "$VERSION")
 dnl Required Autoconf version.
 AC_PREREQ(2.53)
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.40 2002/05/10 18:34:22 woods Exp $"])
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.41 2002/08/23 04:56:46 woods Exp $"])
 
 AM_CONFIG_HEADER(config.h)
 
@@ -57,6 +57,8 @@ AC_CHECK_HEADERS(sys/proc.h, , , [
 #include <sys/param.h>
 #include <sys/user.h>
 ])
+
+AC_CHECK_HEADERS(linux/tasks.h linux/threads.h)
 
 AC_MSG_CHECKING(for sys/cdefs.h)
 AC_TRY_CPP([
