@@ -8,6 +8,8 @@ Please send bug reports to bugs@robohack.planix.com
 
 * User-visible changes new in newsyslog-1.0.104.
 
+- fix portability issues with PID value sanity checks on GNU/Linux.
+
 - fix a bug in the signal name translation that affects all GNU/Linux
   systems and would cause any signals above #6 to be sent with one added
   to their values (eg. SIGUSR1, which is 10 is sent as 11, which SIGSEGV)
@@ -179,4 +181,4 @@ from being rolled over unnecessarily).
 - improved documentation
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.21 2002/08/09 16:02:41 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.22 2002/08/23 04:57:51 woods Exp $"
